--- a/APO.csproj
+++ b/APO.csproj
@@ -99,6 +99,12 @@
     <Compile Include="MedianBlur.Designer.cs">
       <DependentUpon>MedianBlur.cs</DependentUpon>
     </Compile>
+    <Compile Include="Merge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Merge.Designer.cs">
+      <DependentUpon>Merge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Posterize.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MedianBlur.resx">
       <DependentUpon>MedianBlur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Merge.resx">
+      <DependentUpon>Merge.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Posterize.resx">
       <DependentUpon>Posterize.cs</DependentUpon>
@@ -245,6 +254,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\segmentationImage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\steganographyImage.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
